--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "./node_modules/.bin/mocha"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
     "lowdb": "^1.0.0",
     "morgan": "~1.9.0"
+  },
+  "devDependencies": {
+    "mocha": "^9.2.2",
+    "supertest": "^3.0.0"
   }
 }
